# reitrace

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: camera.h  driverReader.h  gradedOutput.h  image.h  light.h  linAlg.h  material.h  model.h  mtlHandler.h  objHandler.h  ray.h  render.h  scene.h  sphere.h  splitString.h  transform.h
src/: hw1.cpp  hw2.cpp  hw3.cpp  hw4.cpp  hw5.cpp  render.cpp
